fixed size header

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="Our development"
       content="project for search job "
       />
+      <meta name='freelancehunt' content='30d1d23547c943f'>
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800;900&display=swap" rel="stylesheet">
       
